@@ -7,44 +7,44 @@ import java.util.Arrays;
 import java.util.List;
 
 public class ProductsTests extends BaseTest {
-    @Test(groups = "smoke",description = "Checking menu items: All displayed and Logout", dataProvider = "name for products")
+    @Test(groups = {"smoke","userShouldBeLogin"},description = "Checking menu items: All displayed and Logout", dataProvider = "name for products")
     public void checkMenu(String productName) {
-        loginPage.login("standard_user", "secret_sauce");
-        Assert.assertTrue(productsPage.isMenuButtonDisplayed());
-        productsPage.clickMenuButton();
-        Assert.assertTrue(productsPage.isMenuDisplayed());
 
-        productsPage.clickAddToCartButton(productName);
-        productsPage.clickShoppingCartLink();
-        cartPage.clickCheckoutButton();
-        checkoutPage.clickMenuButton();
-        cartPage.clickAllItemLink();
-        Assert.assertEquals(productsPage.getTitle(), "Products");
+        boolean menuIsDisplay = productsPage.isMenuButtonDisplayed();
+        Assert.assertTrue(menuIsDisplay);
 
-        cartPage.clickMenuButton();
-        cartPage.clickLogOutLink();
-        Assert.assertTrue(loginPage.isLoginButtonDisplayed());
+       String title = productsPage.clickAddToCartButton(productName)
+                .clickShoppingCartLink()
+                .clickCheckoutButton()
+                .clickMenuButton()
+                .clickAllItemLink()
+                .getTitle();
+        Assert.assertEquals(title, "Products");
+
+        boolean isLoginButtonDisplayed = cartPage.clickMenuButton()
+                .clickLogOutLink()
+                .isLoginButtonDisplayed();
+        Assert.assertTrue(isLoginButtonDisplayed);
     }
 
 
-    @Test(groups = "regression",description = "Checking name, description and price product on the Products page and checking the button 'Add to cart'", dataProvider = "data for products")
+    @Test(groups = {"regression","userShouldBeLogin"},description = "Checking name, description and price product on the Products page and checking the button 'Add to cart'", dataProvider = "data for products")
     public void addToCartProductTest(String productName, String productDescription, String productPrice) {
-        loginPage.login("standard_user", "secret_sauce");
+
         Assert.assertEquals(productsPage.getProductPrice(productName), productPrice);
         Assert.assertEquals(productsPage.getProductDescription(productName), productDescription);
         Assert.assertTrue(productsPage.isItemImageDispalyed(productName));
-        productsPage.clickAddToCartButton(productName);
-        Assert.assertTrue(productsPage.isRemoveFromCartButtonDisplayed(productName));
+        boolean isRemoveButtonDisplay = productsPage.clickAddToCartButton(productName)
+                .isRemoveFromCartButtonDisplayed(productName);
+        Assert.assertTrue(isRemoveButtonDisplay);
     }
 
 
-    @Test(groups = "smoke", description = "Checking price sorting: 'low to high' and 'high to low'")
+    @Test(groups = {"smoke","userShouldBeLogin"}, description = "Checking price sorting: 'low to high' and 'high to low'")
     public void checkSortingPrice() {
-        loginPage.login("standard_user", "secret_sauce");
 
         productsPage.applyFilter("Price (low to high)");
-        String[] lowToHighPrice = {"$7.99", "$9.99", "$15.99", "$15.99", "$29.99", "$49.99"};
-        List<String> expectedItemsOrder = Arrays.asList(lowToHighPrice);
+        List<String> expectedItemsOrder = List.of("$7.99", "$9.99", "$15.99", "$15.99", "$29.99", "$49.99");
         Assert.assertEquals(productsPage.getProductPrices(), expectedItemsOrder);
 
         productsPage.applyFilter("Price (high to low)");
@@ -52,14 +52,17 @@ public class ProductsTests extends BaseTest {
         Assert.assertEquals(productsPage.getProductPrices(), expectedItemsOrder);
     }
 
-    @Test(groups = "regression", description = "Open info page using product name and product image", dataProvider = "name for products")
+    @Test(groups = {"regression","userShouldBeLogin"}, description = "Open info page using product name and product image", dataProvider = "name for products")
     public void openInfoPage(String productName) {
-        loginPage.login("standard_user", "secret_sauce");
-        productsPage.clickNameProduct(productName); //openInfoPageUsingName
-        Assert.assertTrue(infoAboutProductPage.isBackButtonDisplayed());
-        infoAboutProductPage.clickBackButton();
-        productsPage.clickImageProduct(productName); //openInfoPageUsingImage
-        Assert.assertTrue(infoAboutProductPage.isBackButtonDisplayed());
+
+       boolean isBackButtonDisplay =  productsPage.clickNameProduct(productName) //openInfoPageUsingName
+                .isBackButtonDisplayed();
+        Assert.assertTrue(isBackButtonDisplay);
+
+        isBackButtonDisplay = infoAboutProductPage.clickBackButton()
+                .clickImageProduct(productName) //openInfoPageUsingImage
+                .isBackButtonDisplayed();
+        Assert.assertTrue(isBackButtonDisplay);
     }
 
 }
